add prometheus support metrics in http api
